Sharing: Facebook: Like/Share+Count same as Tweet button, and fixed layout - now aligns with top of Tweet button.

--- a/.themes/classic/sass/partials/_sharing.scss
+++ b/.themes/classic/sass/partials/_sharing.scss
@@ -5,4 +5,6 @@
   }
 }
 
-#fb-root { display: none; }
+.twitter-share-button { line-height: 1.2rem; vertical-align: top; }
+
+.fb-like { line-height: 1.2rem; vertical-align: top; }
